--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
+    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <!-- Optional bootstrap theme -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+    
+    <!-- Medium Style Editor -->
+    <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Luxurious+Roman&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <nav class="navbar navbar-default techfont custom-navbar">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url post_list %}" class="navbar-brand bigbrand">My blog</a></li>
+                <li><a href="{% url about %}">About</a></li>
+                <li><a href="https://www.github.com">Github</a></li>
+                <li><a href="https://www.linkedin.com">Linkedin</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                
+                {% if user.is_authenticated %}
+                    <li><a href="{% url post_new %}">New post</a></li>
+                    <li><a href="{% url post_draft_list %}">Drafts</a></li>
+                    <li><a href="{% url logout %}">Log out</a></li>
+                    <li><a>Welcome: {{ user.username }} %}</a></li>
+                {% else %}
+                    <li><a href="{% url login %}"><span class='glyphicon glyphicon-user'></span></a></li>
+                {% endif %}
+
+                
+            </ul>
+        </div>
+    </nav>
+
+    <!-- content block -->
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="blog-posts">
+                    {% block content %}
+                        
+                    {% endblock content %}  
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
