--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -9,6 +9,31 @@
     font-size: 1.5em;
 }
 
+.centerstage{
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.postdate{
+  text-align:center;
+}
+
+.posttitle{
+  font-family: 'Lato', sans-serif;
+  font-size: 3em;
+  text-align: center;
+}
+
+.postcontent{
+  font-family: 'Luxurious Roman', cursive;
+  font-size: 1.5em;
+}
+
+.btn-comment{
+  position: absolute;
+  right: 0px;
+}
+
 /*COLOR CHANGER*/
 /*Credit and Source: http://codepen.io/thapliyalshivam/pen/dvgXVO*/
 .loader{
