--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,8 +29,8 @@
     <nav class="navbar navbar-default techfont custom-navbar">
         <div class="container">
             <ul class="nav navbar-nav">
-                <li><a href="{% url post_list %}" class="navbar-brand bigbrand">My blog</a></li>
-                <li><a href="{% url about %}">About</a></li>
+                <li><a href="{% url 'post_list' %}" class="navbar-brand bigbrand">My blog</a></li>
+                <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="https://www.github.com">Github</a></li>
                 <li><a href="https://www.linkedin.com">Linkedin</a></li>
             </ul>
@@ -38,12 +38,12 @@
             <ul class="nav navbar-nav navbar-right">
                 
                 {% if user.is_authenticated %}
-                    <li><a href="{% url post_new %}">New post</a></li>
-                    <li><a href="{% url post_draft_list %}">Drafts</a></li>
-                    <li><a href="{% url logout %}">Log out</a></li>
-                    <li><a>Welcome: {{ user.username }} %}</a></li>
+                    <li><a href="{% url 'post_new' %}">New post</a></li>
+                    <li><a href="{% url 'post_draft_list' %}">Drafts</a></li>
+                    <li><a href="{% url 'logout' %}">Log out</a></li>
+                    <li><a>Welcome: {{ user.username }} </a></li>
                 {% else %}
-                    <li><a href="{% url login %}"><span class='glyphicon glyphicon-user'></span></a></li>
+                    <li><a href="{% url 'login' %}"><span class='glyphicon glyphicon-user'></span></a></li>
                 {% endif %}
 
                 
