--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,27 +13,27 @@
     
 {% else %}
 
-    <a href="{% url post_publish pk=post.pk %}" class="btn btn-default">Publish</a>
+    <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-default">Publish</a>
 
 {% endif %}
     
-<p class="postcontent">{{ post.title|safe|linebreakbr }}</p>
+<p class="postcontent">{{ post.text|safe|linebreaksbr }}</p>
     
 
 {% if user.is_authenticated %}
 
-    <a href="{% url post_edit pk=post.pk %}" class="btn btn-primary">
+    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
         <span class="glyphicon glyphicon-pencil"></span>
     </a>
 
-    <a href="{% url post_remove pk=post.pk %}" class="btn btn-primary">
+    <a href="{% url 'post_remove' pk=post.pk %}" class="btn btn-primary">
         <span class="glyphicon glyphicon-remove"></span>
     </a>
         
 {% endif %}
 
 <hr>
-<a href="{% url add_comment_to_post pk= post.pk%}" class="btn btn-primary btn-comment"> Add comment:</a>
+<a href="{% url 'add_comment_to_post' pk=post.pk%}" class="btn btn-primary btn-comment"> Add comment:</a>
 
 <div class="container">
     
@@ -44,10 +44,10 @@
             {{ comment.created_date }}
             
             {% if not comment.approved_comment %}
-                <a href="{% url comment_remove pk=comment.pk %}" class="btn btn-default">
+                <a href="{% url 'comment_remove' pk=comment.pk %}" class="btn btn-default">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
-                <a href="{% url comment_approve pk=comment.pk %}" class="btn btn-primary">
+                <a href="{% url 'comment_approve' pk=comment.pk %}" class="btn btn-primary">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             {% endif %}
