--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,12 +1,11 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    
-    {% for post in posts %}
+    {% for post in object_list %}
         <div class="post">
-            <p class="date">Created in: {{ post.created_date|data:'d-m-Y' }}</p>
-            <h1><a href="{% url post_detail pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|truncatechars:200 }}</p>
+            <p class="date">Created in: {{ post.created_date|date:'d-m-Y' }}</p>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|safe|truncatechars:200 }}</p>
         </div>
         
     {% empty %}
