--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,14 +2,13 @@
 
 {% block content %}
     <div class="centerstage">
-        
+        <h1>Why dont you work</h1>
         {% for post in post_list %}
-            <div class="post">
-                <h1><a href="{% url post_detail pk=post.pk %}"></a></h1>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}"></a></h1>
                 <div class="date">
-                    <p>Published on: {{ post.published|data:"D M Y" }}</p>
+                    <p>Published on: {{ post.published|date:"D M Y" }}</p>
                 </div>
-                <a href="{% url post_detail pk=post.pk %}">Comments: {{ post.approve_comments.count }}</a>
+                <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approve_comments.count }}</a>
             </div>
         {% endfor %}
             
