Added a shifting color effect to all text

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Luxurious+Roman&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class='loader'>
     <nav class="navbar navbar-default techfont custom-navbar">
         <div class="container">
             <ul class="nav navbar-nav">
