--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,9 +2,8 @@
 
 {% block content %}
     <div class="centerstage">
-        <h1>Why dont you work</h1>
         {% for post in post_list %}
-                <h1><a href="{% url 'post_detail' pk=post.pk %}"></a></h1>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <div class="date">
                     <p>Published on: {{ post.published|date:"D M Y" }}</p>
                 </div>
